deploy: julianbrooks/comp2850-hci-mdbook@80b66586549a6fded81541b7b59675aa75e0ef14

--- a/references/assistive-testing-checklist.html
+++ b/references/assistive-testing-checklist.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Accessibility Testing Guide - COMP2850 • Human-Computer Interaction</title>
+        <title>Assistive Testing Checklist - COMP2850 • Human-Computer Interaction</title>
 
 
         <!-- Custom HTML head -->
@@ -180,17 +180,6 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="assistive-technology-testing-checklist-week-6--week-11"><a class="header" href="#assistive-technology-testing-checklist-week-6--week-11">Assistive Technology Testing Checklist (Week 6 → Week 11)</a></h1>
-<h2 id="what-is-accessibility-first-design"><a class="header" href="#what-is-accessibility-first-design">What is Accessibility-First Design?</a></h2>
-<p><strong>Accessibility-first design</strong> means building interfaces that work for everyone from the start—not retrofitting accessible features after the fact. In this module, we prioritise:</p>
-<ul>
-<li><strong><a href="glossary.html#wcag">WCAG</a> 2.2 AA compliance</strong> as the minimum standard for all features</li>
-<li><strong><a href="glossary.html#screen-reader">Screen reader</a> compatibility</strong> verified through NVDA/Orca testing in every lab</li>
-<li><strong>Keyboard navigation</strong> ensuring all interactions work without a mouse</li>
-<li><strong><a href="glossary.html#no-js-parity">No-JS parity</a></strong> so core functionality remains available when JavaScript fails or is unavailable</li>
-<li><strong>Inclusive design</strong> informed by people-centred language and real customer needs</li>
-</ul>
-<p>Unlike "accessibility as an audit" (checking compliance at the end), accessibility-first means every design decision—from route structure to <a href="glossary.html#aria">ARIA</a> attributes to colour contrast—is evaluated for inclusion before implementation. This approach reduces technical debt, improves usability for all users, and ensures legal compliance with the Equality Act 2010 and UK GDPR.</p>
-<h2 id="testing-checklist"><a class="header" href="#testing-checklist">Testing Checklist</a></h2>
 <p>Use this mini-check at the end of every lab to capture evidence quickly. Print it or keep it in your repo (<code>testing/checklist.md</code>).</p>
 <div class="table-wrapper"><table><thead><tr><th>Area</th><th>Steps</th><th>Evidence to capture</th></tr></thead><tbody>
 <tr><td>Keyboard-only</td><td>Tab through the entire flow: skip link → forms → buttons. Ensure visible focus.</td><td>Screenshot or short note confirming order + any issues.</td></tr>
@@ -213,11 +202,11 @@
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../references/example-accessible-inline-edit.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../references/accessibility-testing.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../references/assistive-testing-checklist.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../references/privacy-by-design.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -227,11 +216,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../references/example-accessible-inline-edit.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../references/accessibility-testing.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../references/assistive-testing-checklist.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../references/privacy-by-design.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
