--- a/wk06/wk6-lab2-needs-consent-backlog.html
+++ b/wk06/wk6-lab2-needs-consent-backlog.html
@@ -196,6 +196,7 @@
 <li><a href="https://ico.org.uk/for-organisations/uk-gdpr-guidance-and-resources/">ICO (2024). "Guide to Data Protection by Design and Default"</a></li>
 <li><a href="../../references/consent-pii-faq.html">Consent &amp; PII FAQ</a> (module ethics guidance)</li>
 <li><a href="../../references/privacy-by-design.html">Privacy by Design</a> (UK GDPR compliance framework)</li>
+<li><a href="../../references/assistive-testing-checklist.html">Assistive Testing Checklist</a> (module testing guide for Weeks 6-11)</li>
 </ul>
 <p><strong>Recommended</strong></p>
 <ul>
