--- a/wk11/wk11-lab1-studio-crit.html
+++ b/wk11/wk11-lab1-studio-crit.html
@@ -216,8 +216,15 @@
 <blockquote>
 <p><strong>Visual</strong>: Evidence-led critique loop</p>
 </blockquote>
-<p>{{#include ../../references/visuals/crit-loop.md}}</p>
-<p><small>See <a href="../../references/process-visuals.html#crit-loop">Process Visuals</a> for captioned steps.</small></p>
+<pre class="mermaid">graph TD
+  Present[Evidence-led demo]
+  Present --&gt; Feedback[Peer &amp; staff critique]
+  Feedback --&gt; Notes[Crit notes &amp; backlog updates]
+  Notes --&gt; Portfolio[Portfolio &amp; wrap-up]
+  Portfolio --&gt; Plan[Semester 2 planning]
+  Plan --&gt; Present
+</pre>
+<p><small>See <a href="../references/process-visuals.html#crit-loop">Process Visuals</a> for captioned steps.</small></p>
 <hr />
 <h2 id="learning-focus"><a class="header" href="#learning-focus">Learning Focus</a></h2>
 <h3 id="lab-objectives"><a class="header" href="#lab-objectives">Lab Objectives</a></h3>
@@ -240,16 +247,16 @@ Maps to WCAG: 2.2 AA (demonstrating compliance)</li>
 <h2 id="key-concepts"><a class="header" href="#key-concepts">Key Concepts</a></h2>
 <h3 id="design-critique"><a class="header" href="#design-critique">Design Critique</a></h3>
 <blockquote>
-<p><strong>Design Critique</strong> [GLOSSARY]</p>
+<p><strong>Design Critique</strong> (<a href="../references/glossary.html">Glossary</a>)</p>
 <p>Structured peer review of design work. <strong>Not personal feedback</strong>—focuses on work, evidence, impact.</p>
-<p><strong>Characteristics</strong>:</p>
+<p><strong>Characteristics</strong></p>
 <ul>
 <li><strong>Specific</strong>: "Error summary not keyboard-focusable" (good) vs "errors bad" (vague)</li>
 <li><strong>Constructive</strong>: Suggest alternatives, not just problems</li>
 <li><strong>Evidence-based</strong>: Reference data, WCAG, observations (not opinions)</li>
 <li><strong>Respectful</strong>: Assume positive intent, acknowledge constraints</li>
 </ul>
-<p><strong>Format</strong> (this module):</p>
+<p><strong>Format</strong> (this module)</p>
 <ul>
 <li>Presenter shows work + evidence</li>
 <li>Audience asks clarifying questions</li>
@@ -257,13 +264,13 @@ Maps to WCAG: 2.2 AA (demonstrating compliance)</li>
 <li>Presenter notes feedback (doesn't defend in real-time)</li>
 </ul>
 <p><strong>HCI Connection</strong>: Critique improves design through <strong>external perspective</strong>—you're too close to your work to see all issues.</p>
-<p><strong>Not a critique</strong>:</p>
+<p><strong>Not a critique</strong></p>
 <ul>
-<li>"I don't like the color" (subjective preference without rationale)</li>
+<li>"I don't like the colour" (subjective preference without rationale)</li>
 <li>"This sucks" (not constructive)</li>
 <li>"You should have..." (hindsight, not helpful)</li>
 </ul>
-<p><strong>Good critique</strong>:</p>
+<p><strong>Good critique</strong></p>
 <ul>
 <li>"The error message says 'Title required' but doesn't explain the max length constraint. Pilot P3 hit this—could you add that info?"</li>
 </ul>
@@ -271,16 +278,16 @@ Maps to WCAG: 2.2 AA (demonstrating compliance)</li>
 </blockquote>
 <h3 id="evidence-led-presentation"><a class="header" href="#evidence-led-presentation">Evidence-Led Presentation</a></h3>
 <blockquote>
-<p><strong>Evidence-Led Presentation</strong> [GLOSSARY]</p>
+<p><strong>Evidence-Led Presentation</strong> (<a href="../references/glossary.html">Glossary</a>)</p>
 <p>Presentation style where every claim is backed by artifacts (data, screenshots, quotes).</p>
-<p><strong>Structure</strong>:</p>
+<p><strong>Structure</strong></p>
 <ol>
 <li><strong>Problem</strong>: "T2 edit had 67% completion (0% no-JS)" ← metric</li>
 <li><strong>Root cause</strong>: "Validation errors not announced to SR" ← pilot quote + WCAG reference</li>
 <li><strong>Fix</strong>: "Added <code>role=alert</code>" ← code diff</li>
 <li><strong>Verification</strong>: "Post-change: 100% completion" ← after-metrics + screenshot</li>
 </ol>
-<p><strong>What NOT to do</strong>:</p>
+<p><strong>What NOT to do</strong></p>
 <ul>
 <li>"We made it better" (vague—better how?)</li>
 <li>"Users struggled" (who? how many? with what?)</li>
@@ -292,9 +299,9 @@ Maps to WCAG: 2.2 AA (demonstrating compliance)</li>
 </blockquote>
 <h3 id="accessibility-demonstration"><a class="header" href="#accessibility-demonstration">Accessibility Demonstration</a></h3>
 <blockquote>
-<p><strong>Accessibility Demonstration</strong> [GLOSSARY]</p>
+<p><strong>Accessibility Demonstration</strong> (<a href="../references/glossary.html">Glossary</a>)</p>
 <p>Live proof that inclusive design works. <strong>Show, don't tell</strong>.</p>
-<p><strong>Examples</strong>:</p>
+<p><strong>Examples</strong></p>
 <ul>
 <li><strong>Keyboard</strong>: Tab through form → submit error → Tab to error link → press Enter → focus lands on input</li>
 <li><strong>Screen reader</strong>: Turn on NVDA/Orca → navigate to form → submit error → SR announces "Alert. Title is required"</li>
@@ -302,13 +309,13 @@ Maps to WCAG: 2.2 AA (demonstrating compliance)</li>
 </ul>
 <p><strong>Why live demo?</strong> Screenshots can be faked. Live demo proves system works right now.</p>
 <p><strong>Backup plan</strong>: If live demo fails (demo gremlins), have <strong>video recording</strong> or <strong>annotated screenshots</strong> ready.</p>
-<p><strong>What to show</strong>:</p>
+<p><strong>What to show</strong></p>
 <ul>
 <li>Before state (broken or suboptimal)</li>
 <li>After state (fixed)</li>
 <li>Evidence it meets WCAG (checklist row, transcript)</li>
 </ul>
-<p><strong>Common mistakes</strong>:</p>
+<p><strong>Common mistakes</strong></p>
 <ul>
 <li>Only showing HTMX path (ignoring no-JS)</li>
 <li>Not narrating what's happening ("I'm pressing Tab, now I'm on the error link...")</li>
@@ -318,25 +325,25 @@ Maps to WCAG: 2.2 AA (demonstrating compliance)</li>
 </blockquote>
 <h3 id="constructive-feedback"><a class="header" href="#constructive-feedback">Constructive Feedback</a></h3>
 <blockquote>
-<p><strong>Constructive Feedback</strong> [GLOSSARY]</p>
+<p><strong>Constructive Feedback</strong> (<a href="../references/glossary.html">Glossary</a>)</p>
 <p>Feedback that helps recipient improve. Has three parts: observation + impact + suggestion.</p>
-<p><strong>Formula</strong>:</p>
+<p><strong>Formula</strong></p>
 <ol>
 <li><strong>Observation</strong>: "I noticed X" (specific, factual)</li>
 <li><strong>Impact</strong>: "This might affect Y" (consequence, not judgment)</li>
 <li><strong>Suggestion</strong>: "Have you considered Z?" (alternative, not mandate)</li>
 </ol>
-<p><strong>Example (good)</strong>:</p>
+<p><strong>Example (good)</strong></p>
 <ul>
 <li>Observation: "Your error summary uses <code>aria-live=assertive</code>, which I saw announced in your SR demo"</li>
 <li>Impact: "In my testing, <code>assertive</code> interrupted mid-sentence when I was reading other content"</li>
 <li>Suggestion: "Have you tested with <code>aria-live=polite</code> to see if it's less disruptive? Might be a good trade-off if errors aren't time-critical."</li>
 </ul>
-<p><strong>Example (bad)</strong>:</p>
+<p><strong>Example (bad)</strong></p>
 <ul>
 <li>"You should use <code>polite</code> not <code>assertive</code>" ← prescriptive, no context</li>
 </ul>
-<p><strong>Receiving feedback</strong>:</p>
+<p><strong>Receiving feedback</strong></p>
 <ul>
 <li><strong>Listen</strong>: Don't defend immediately (note it, reflect later)</li>
 <li><strong>Clarify</strong>: "Can you show me where you saw that?"</li>
@@ -351,11 +358,11 @@ Maps to WCAG: 2.2 AA (demonstrating compliance)</li>
 <p><strong>Use Markdown slides</strong> (e.g., Marp) or <strong>simple slide deck</strong> (Google Slides, PowerPoint).</p>
 <p><strong>5-slide structure</strong>:</p>
 <ol>
-<li><strong>Title slide</strong>: Project name, team, date</li>
-<li><strong>Problem + Evidence</strong>: What was broken? (metrics, quotes, WCAG violations)</li>
-<li><strong>Solution</strong>: What changed? (code diff, screenshots)</li>
-<li><strong>Verification</strong>: How do we know it worked? (after-metrics, regression checklist)</li>
-<li><strong>Next Steps</strong>: What remains? (backlog, Semester 2 plans)</li>
+<li><strong>Title slide</strong> — Project name, team, date</li>
+<li><strong>Problem + Evidence</strong> — What was broken? (metrics, quotes, WCAG violations)</li>
+<li><strong>Solution</strong> — What changed? (code diff, screenshots)</li>
+<li><strong>Verification</strong> — How do we know it worked? (after-metrics, regression checklist)</li>
+<li><strong>Next Steps</strong> — What remains? (backlog, Semester 2 plans)</li>
 </ol>
 <p><strong>Example</strong>:</p>
 <p><strong>Slide 2: Problem + Evidence</strong></p>
