deploy: julianbrooks/comp2850-hci-mdbook@4613f603052e1287214933afa808d58569598a1a

--- a/404.html
+++ b/404.html
@@ -180,8 +180,33 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
-<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
+                        <h1 id="page-not-found"><a class="header" href="#page-not-found">Page Not Found</a></h1>
+<p><img src="https://img.shields.io/badge/COMP2850-HCI-blue" alt="COMP2850" />
+<img src="https://img.shields.io/badge/Status-404-red" alt="404" /></p>
+<hr />
+<h2 id="oops-that-page-doesnt-exist"><a class="header" href="#oops-that-page-doesnt-exist">Oops! That page doesn't exist</a></h2>
+<p>The page you're looking for might have been moved, renamed, or doesn't exist.</p>
+<h3 id="what-you-can-do"><a class="header" href="#what-you-can-do">What you can do</a></h3>
+<ul>
+<li><strong>Go to the <a href="index.html">Home page</a></strong> to start from the beginning</li>
+<li><strong>Check the <a href="SUMMARY.html">Table of Contents</a></strong> to find what you're looking for</li>
+<li><strong>Search</strong> using the search box at the top of the page</li>
+<li><strong>Contact the teaching team</strong> if you think this is an error</li>
+</ul>
+<hr />
+<h3 id="common-pages"><a class="header" href="#common-pages">Common pages</a></h3>
+<ul>
+<li><a href="wk06/wk6-lab1-html-css-htmx.html">Week 6 Lab 1: Server-first foundations</a></li>
+<li><a href="wk07/wk7-lab1-ethics-inline-edit.html">Week 7 Lab 1: Ethics &amp; inline edit</a></li>
+<li><a href="wk08/wk8-lab1-prototyping-constraints.html">Week 8 Lab 1: Prototyping &amp; constraints</a></li>
+<li><a href="wk09/wk9-lab1-eval-plan-instrumentation.html">Week 9 Lab 1: Evaluation planning</a></li>
+<li><a href="wk10/wk10-lab1-analysis-prioritisation.html">Week 10 Lab 1: Analysis &amp; prioritisation</a></li>
+<li><a href="wk11/wk11-lab1-studio-crit.html">Week 11 Lab 1: Studio critique</a></li>
+<li><a href="assessment/overview.html">Assessment Overview</a></li>
+<li><a href="references/glossary.html">Glossary</a></li>
+</ul>
+<hr />
+<p><strong>Need help?</strong> Contact the teaching team via MS Teams COMP2850 forum.</p>
 
                     </main>
 
