deploy: julianbrooks/comp2850-hci-mdbook@68701065b2416d08abb82a4bb618d1977ba6b232

--- a/wk11/wk11-lab1-studio-crit.html
+++ b/wk11/wk11-lab1-studio-crit.html
@@ -186,16 +186,16 @@
 <img src="https://img.shields.io/badge/Status-Draft-yellow" alt="Status" /></p>
 <hr />
 <h2 id="before-lab-required-reading-10-mins"><a class="header" href="#before-lab-required-reading-10-mins">Before Lab: Required Reading (10 mins)</a></h2>
-<p>📖 <strong>Essential</strong>:</p>
+<p>📖 <strong>Essential</strong></p>
 <ul>
 <li><a href="https://www.ideo.com/blog/design-critique">IDEO: The Art of Critique</a> (5 min)</li>
 <li>Review your Task 2 bundle (<code>wk10/gradescope/task2/</code>)</li>
-<li>Review <code>analysis/summary.md</code> (before/after metrics)</li>
+<li>Review your analysis summary (<code>analysis/summary.md</code>) for before/after metrics</li>
 </ul>
-<p>📖 <strong>Quick reference</strong>:</p>
+<p>📖 <strong>Quick reference</strong></p>
 <ul>
-<li><a href="../../references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
-<li><a href="../../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a></li>
+<li><a href="../references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
+<li><a href="../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a></li>
 </ul>
 <hr />
 <h2 id="introduction-from-evidence-to-narrative"><a class="header" href="#introduction-from-evidence-to-narrative">Introduction: From Evidence to Narrative</a></h2>
