--- a/print.html
+++ b/print.html
@@ -8644,11 +8644,11 @@ EOF
 <img src="https://img.shields.io/badge/Status-Draft-yellow" alt="Status" /></p>
 <hr />
 <h2 id="before-lab-required-reading-10-mins-1"><a class="header" href="#before-lab-required-reading-10-mins-1">Before Lab: Required Reading (10 mins)</a></h2>
-<p>📖 <strong>Essential</strong>:</p>
+<p>📖 <strong>Essential</strong></p>
 <ul>
 <li>Review your redesign brief (<code>wk10/lab-wk10/docs/redesign-brief.md</code>)</li>
-<li>Review <a href="wk10/../../references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
-<li>Skim the <a href="wk10/../../references/screenshot-guide.html">Screenshot Evidence Guide</a></li>
+<li>Review <a href="wk10/../references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
+<li>Skim the <a href="wk10/../references/screenshot-guide.html">Screenshot Evidence Guide</a></li>
 <li><a href="https://www.w3.org/WAI/WCAG22/quickref/">WCAG 2.2 Quick Reference</a> (sections 3.3, 4.1)</li>
 </ul>
 <p>📖 <strong>Contextual</strong>:</p>
