deploy: julianbrooks/comp2850-hci-mdbook@db21fb6eaff611996d7b356407ca0e1d66eaa374

--- a/wk10/wk10-lab2-redesign-reverify-package.html
+++ b/wk10/wk10-lab2-redesign-reverify-package.html
@@ -337,7 +337,7 @@ Maps to WCAG: 2.2 AA (demonstrable compliance)</li>
 <h2 id="activity-a-implement-priority-1-fix-40-min"><a class="header" href="#activity-a-implement-priority-1-fix-40-min">Activity A: Implement Priority 1 Fix (40 min)</a></h2>
 <p><strong>Goal</strong>: Execute redesign plan from Week 10 Lab 1 brief.</p>
 <h3 id="step-1-review-redesign-brief-5-min"><a class="header" href="#step-1-review-redesign-brief-5-min">Step 1: Review redesign brief (5 min)</a></h3>
-<p><strong>Open <code>wk10/lab-wk10/docs/redesign-brief.md</code></strong> and confirm:</p>
+<p>Open <code>wk10/lab-wk10/docs/redesign-brief.md</code> and confirm:</p>
 <ul>
 <li><input disabled="" type="checkbox"/>
 Problem statement clear (backed by Week 9 data)</li>
