deploy: julianbrooks/comp2850-hci-mdbook@fab57163ee9a4fec8e1488c8964c3edcd8a94ee0

--- a/wk08/wk8-lab1-prototyping-constraints.html
+++ b/wk08/wk8-lab1-prototyping-constraints.html
@@ -199,12 +199,11 @@
 <hr />
 <h2 id="pre-lab-reading-15-min"><a class="header" href="#pre-lab-reading-15-min">Pre-lab reading (15 min)</a></h2>
 <ul>
-<li><a href="../../references/template-map-week8.html">Template Map for Week 8</a> (structure overview of the partials you will build)</li>
-<li><a href="https://hypermedia.systems/active-search/">hypermedia.systems — Active Search</a></li>
+<li><a href="https://htmx.org/examples/active-search/">HTMX Examples — Active Search</a></li>
 <li><a href="https://htmx.org/attributes/hx-push-url/">HTMX reference: <code>hx-push-url</code></a> and <a href="https://htmx.org/attributes/hx-trigger/"><code>hx-trigger</code></a></li>
 <li><a href="https://pebbletemplates.io/wiki/guide/extending/">Pebble template inheritance</a> and include syntax</li>
 </ul>
-<p>Keep the <a href="../../references/pebble-cheatsheet.html">Pebble Cheatsheet</a> and <a href="../../references/htmx-pattern-cheatsheet.html">HTMX Pattern Cheatsheet</a> open for copy/paste snippets.</p>
+<p>Keep the <a href="../references/pebble-cheatsheet.html">Pebble Cheatsheet</a> and <a href="../references/htmx-pattern-cheatsheet.html">HTMX Pattern Cheatsheet</a> open for copy/paste snippets.</p>
 <hr />
 <h2 id="learning-focus"><a class="header" href="#learning-focus">Learning Focus</a></h2>
 <h3 id="lab-objectives"><a class="header" href="#lab-objectives">Lab Objectives</a></h3>
@@ -683,9 +682,7 @@ git commit -m "wk8s1: partials + pagination/filter with hx-push-url" --no-verify
 <hr />
 <h2 id="further-resources"><a class="header" href="#further-resources">Further resources</a></h2>
 <ul>
-<li><code>../../references/template-map-week8.md</code></li>
-<li><code>../../references/htmx-pattern-cheatsheet.md</code></li>
-<li><a href="https://hypermedia.systems/active-search/">Hypermedia Systems — Active Search</a></li>
+<li><a href="https://htmx.org/examples/active-search/">HTMX Examples — Active Search</a></li>
 <li><a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG/Navigation_and_orienting#pagination">MDN — Accessible Pagination Patterns</a></li>
 </ul>
 <p>You now have a scalable, accessible list structure ready for deeper evaluation and instrumentation.</p>
