deploy: julianbrooks/comp2850-hci-mdbook@5f5eecd4f5f5acd7654bec1423e61b45e49d6894

--- a/wk08/wk8-lab1-prototyping-constraints.html
+++ b/wk08/wk8-lab1-prototyping-constraints.html
@@ -201,9 +201,9 @@
 <ul>
 <li><a href="https://htmx.org/examples/active-search/">HTMX Examples — Active Search</a></li>
 <li><a href="https://htmx.org/attributes/hx-push-url/">HTMX reference: <code>hx-push-url</code></a> and <a href="https://htmx.org/attributes/hx-trigger/"><code>hx-trigger</code></a></li>
-<li><a href="https://pebbletemplates.io/wiki/guide/extending/">Pebble template inheritance</a> and include syntax</li>
+<li><a href="https://pebbletemplates.io/wiki/tag/extends/">Pebble template inheritance</a> and include syntax</li>
 </ul>
-<p>Keep the <a href="../references/pebble-cheatsheet.html">Pebble Cheatsheet</a> and <a href="../references/htmx-pattern-cheatsheet.html">HTMX Pattern Cheatsheet</a> open for copy/paste snippets.</p>
+<p>Keep the <a href="../references/pebble-cheatsheet.html">Pebble Cheatsheet</a> and <a href="../references/htmx-patterns.html">HTMX Patterns</a> open for reference.</p>
 <hr />
 <h2 id="learning-focus"><a class="header" href="#learning-focus">Learning Focus</a></h2>
 <h3 id="lab-objectives"><a class="header" href="#lab-objectives">Lab Objectives</a></h3>
