--- a/print.html
+++ b/print.html
@@ -3959,9 +3959,9 @@ which one you fixed first? Would your decision differ if time wasn't limited?</p
 <ul>
 <li><a href="https://htmx.org/examples/active-search/">HTMX Examples — Active Search</a></li>
 <li><a href="https://htmx.org/attributes/hx-push-url/">HTMX reference: <code>hx-push-url</code></a> and <a href="https://htmx.org/attributes/hx-trigger/"><code>hx-trigger</code></a></li>
-<li><a href="https://pebbletemplates.io/wiki/guide/extending/">Pebble template inheritance</a> and include syntax</li>
+<li><a href="https://pebbletemplates.io/wiki/tag/extends/">Pebble template inheritance</a> and include syntax</li>
 </ul>
-<p>Keep the <a href="wk08/../references/pebble-cheatsheet.html">Pebble Cheatsheet</a> and <a href="wk08/../references/htmx-pattern-cheatsheet.html">HTMX Pattern Cheatsheet</a> open for copy/paste snippets.</p>
+<p>Keep the <a href="wk08/../references/pebble-cheatsheet.html">Pebble Cheatsheet</a> and <a href="wk08/../references/htmx-patterns.html">HTMX Patterns</a> open for reference.</p>
 <hr />
 <h2 id="learning-focus-4"><a class="header" href="#learning-focus-4">Learning Focus</a></h2>
 <h3 id="lab-objectives-4"><a class="header" href="#lab-objectives-4">Lab Objectives</a></h3>
