deploy: julianbrooks/comp2850-hci-mdbook@33447928707876f85950d8b7a67a366aa7f7c3df

--- a/print.html
+++ b/print.html
@@ -4453,8 +4453,8 @@ git commit -m "wk8s1: partials + pagination/filter with hx-push-url" --no-verify
 <h2 id="before-lab-required-reading-15-mins"><a class="header" href="#before-lab-required-reading-15-mins">Before Lab: Required Reading (15 mins)</a></h2>
 <p>📖 <strong>Essential</strong></p>
 <ul>
-<li>Ensure Week 8 starter repo updates (pagination work) are committed/pushed:</li>
-<li><a href="https://htmx.org/essays/handling-server-errors/">HTMX: Server Errors</a></li>
+<li>Ensure Week 8 starter repo updates (pagination work) are committed/pushed</li>
+<li><a href="https://htmx.org/reference/#events">HTMX: Events Reference</a> (htmx:responseError, htmx:beforeSwap)</li>
 <li><a href="https://htmx.org/attributes/hx-confirm/">HTMX: hx-confirm</a></li>
 <li><a href="https://webaim.org/articles/formvalidation/">WebAIM: Forms - Accessible Error Identification</a></li>
 </ul>
