--- a/print.html
+++ b/print.html
@@ -330,7 +330,7 @@ Ofili, Jonathan Pickering, Xiao Wang]
 <ul>
 <li><a href="https://www.w3.org/WAI/WCAG22/quickref/">W3C (2024). WCAG 2.2 Quick Reference</a></li>
 <li><a href="https://developer.mozilla.org/en-US/docs/Glossary/Semantics#semantic_elements">MDN: Semantic HTML</a></li>
-<li><a href="wk06/../../references/privacy-by-design.html">Privacy by Design</a> (module-specific ethics guidance)</li>
+<li><a href="wk06/../references/privacy-by-design.html">Privacy by Design</a> (module-specific ethics guidance)</li>
 </ul>
 <blockquote>
 <p><strong>Starter code</strong>: Clone the <a href="wk06/../../resources/code-resources.html#week-6">starter repository</a> or download the zip before the lab.</p>
@@ -371,7 +371,7 @@ Ofili, Jonathan Pickering, Xiao Wang]
 <li>Verified keyboard navigation, screen reader announcements, and no-JS parity</li>
 </ul>
 <h3 id="learning-outcomes-addressed"><a class="header" href="#learning-outcomes-addressed">Learning Outcomes Addressed</a></h3>
-<p>This lab contributes to the following module Learning Outcomes (<a href="wk06/../../references/learning-outcomes.html">full definitions</a>):</p>
+<p>This lab contributes to the following module Learning Outcomes (<a href="wk06/../references/learning-outcomes.html">full definitions</a>):</p>
 <ul>
 <li><strong>LO5</strong>: Create interface prototypes — evidenced by functional HTMX task list</li>
 <li><strong>LO7</strong>: Analyse design constraints — evidenced by no-JS parity verification</li>
@@ -494,7 +494,7 @@ Ofili, Jonathan Pickering, Xiao Wang]
 <p><strong>Time</strong>: 15 minutes
 <strong>Materials</strong>: Starter pack (Gradle project with Ktor + Pebble)</p>
 <blockquote>
-<p>Keep the <a href="wk06/../../references/pebble-cheatsheet.html">Pebble Cheatsheet</a> handy for syntax reminders.</p>
+<p>Keep the <a href="wk06/../references/pebble-cheatsheet.html">Pebble Cheatsheet</a> handy for syntax reminders.</p>
 </blockquote>
 <h3 id="step-1-clone-starter-pack"><a class="header" href="#step-1-clone-starter-pack">Step 1: Clone Starter Pack</a></h3>
 <pre><code class="language-bash"># Clone starter repository (URL provided on Minerva)
@@ -810,7 +810,7 @@ fun Application.module() {
 <li><code>{{ title | escape }}</code> - HTML-escape (auto-enabled in Pebble)</li>
 <li><code>{{ price | default(0) }}</code> - Fallback value if null</li>
 </ul>
-<p><strong>Reference</strong>: <a href="https://pebbletemplates.io/">Pebble Documentation</a> • <a href="wk06/../../references/pebble-intro.html">Pebble Intro</a></p>
+<p><strong>Reference</strong>: <a href="https://pebbletemplates.io/">Pebble Documentation</a> • <a href="wk06/../references/pebble-intro.html">Pebble Intro</a></p>
 </blockquote>
 <p>Edit <code>src/main/resources/templates/tasks/index.peb</code>:</p>
 <pre><code class="language-html">{% extends "base.peb" %}
@@ -1324,7 +1324,7 @@ WCAG: 2.4.1 (skip link), 4.1.3 (status messages)"
 </ol>
 <p><strong>Preparation</strong>:</p>
 <ul>
-<li>Read <a href="wk06/../../references/consent-pii-faq.html">Consent &amp; PII FAQ</a> and <a href="wk06/../../references/privacy-by-design.html">Privacy by Design</a></li>
+<li>Read <a href="wk06/../references/consent-pii-faq.html">Consent &amp; PII FAQ</a> and <a href="wk06/../references/privacy-by-design.html">Privacy by Design</a></li>
 <li>Bring laptop with working scaffold (Lab 1 code)</li>
 <li>Be ready to pair with a classmate for interviews</li>
 </ul>
